Block broken consent modals

--- a/pagead-blocker.css
+++ b/pagead-blocker.css
@@ -1,3 +1,6 @@
-#masthead-ad {
+#masthead-ad,
+#consent-bump,
+iron-overlay-backdrop,
+ytd-action-companion-ad-renderer {
     display: none!important;
 }
